# UVAIGC

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bace042  README.md  Resource.qrc  UVAIGC copy-Info.plist  UVAIGC.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testgitfile.cpp  testgitfile.h
AudioVocalSeparation/: AVS_MDXNet_ONNX_Strategy.cpp  AVS_MDXNet_ONNX_Strategy.hpp  AVS_Task.cpp  AVS_Task.hpp  AVS_TaskProcessingStrategy.cpp  AVS_TaskProcessingStrategy.hpp  AVS_TaskProcessor.cpp  AVS_TaskProcessor.hpp  AVS_type.h  AudioVocalSeparation.cpp  AudioVocalSeparation.hpp
AudioVocalSeparation/LoaderFile/: AVS_LoaderFile.cpp  AVS_LoaderFile.hpp  AVS_QTLoaderFile.cpp  AVS_QTLoaderFile.hpp
AudioVocalSeparation/SaveFile/: AVS_SaveFile.cpp  AVS_SaveFile.hpp  AVS_SaveFileModule.cpp  AVS_SaveFileModule.hpp
AudioVocalSeparationUI/: AVS_TaskCustomItem.cpp  AVS_TaskCustomItem.hpp  AVS_TaskProcessor_QT.cpp  AVS_TaskProcessor_QT.hpp  AVS_Task_QTtool.cpp  AVS_Task_QTtool.hpp  MySlider.cpp  MySlider.h  QProgressIndicator.cpp  QProgressIndicator.h  TaskCustomItem.cpp  TaskCustomItem.h  TaskCustomItem.ui  TaskListWidgetsClass.cpp  TaskListWidgetsClass.h  TaskListWidgetsClass.ui  TaskQListWidget.cpp  TaskQListWidget.h  VideoQtWidgets.cpp  VideoQtWidgets.h  VideoQtWidgets.ui
Basis/: FFMPEG_Strategy.cpp  FFMPEG_Strategy.hpp  OperationCanceledException.h  SRTQTime.cpp  SRTQTime.h  TaskBasis.cpp  TaskBasis.hpp
Lib/MACLib/fftw3/include/: fftw3.h
SR/: README.md  SR_Task.cpp  SR_Task.hpp  SR_TaskProcessingStrategy.cpp  SR_TaskProcessingStrategy.hpp  SR_TaskProcessor.cpp  SR_TaskProcessor.hpp  SR_TaskProcessor_QT.cpp  SR_TaskProcessor_QT.hpp  SR_type.h  sr_esrgan_ncnn_strategy.cpp  sr_esrgan_ncnn_strategy.h
SRUI/: SR_TaskCustomItem.cpp  SR_TaskCustomItem.hpp  SR_TaskQListWidget.cpp  SR_TaskQListWidget.h  sr_editqtwidgets.cpp  sr_editqtwidgets.h  sr_editqtwidgets.ui  sr_tasklistui_main.cpp  sr_tasklistui_main.h  sr_tasklistui_main.ui
SettingSpanel/: SettingSpanelQtWidgetsClass.cpp  SettingSpanelQtWidgetsClass.h  SettingSpanelQtWidgetsClass.ui  SettingSpanel_main.cpp  SettingSpanel_main.h  Settings_info.cpp  Settings_info.hpp  avs_settingqtwidgetsclass.cpp  avs_settingqtwidgetsclass.h  avs_settingqtwidgetsclass.ui  general_settings_widgets.cpp  general_settings_widgets.h  general_settings_widgets.ui  sr_settingqtwidgetsclass.cpp  sr_settingqtwidgetsclass.h  sr_settingqtwidgetsclass.ui
SettingSpanel/Download/: DownloadCustomItem.cpp  DownloadCustomItem.h  DownloadCustomItem.ui  DownloadListOBJ.cpp  DownloadListOBJ.h  DownloadListWidgetsClass.cpp  DownloadListWidgetsClass.h  DownloadTool.cpp  DownloadTool.h
SettingSpanel/IAP_and_update/UpdateManager/: UpdateManager.cpp  UpdateManager.hpp
ffmpegtest/: ffmpegtest.cpp  ffmpegtest.h  ffmpegtest.ui
translations/: UVAIGC_es_US.qm  UVAIGC_es_US.ts  UVAIGC_zh_CN.ts
user/: UserDeviceCustomDialog.cpp  UserDeviceCustomDialog.hpp  UserMainWindow.cpp  UserMainWindow.h  UserMainWindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  registerwndow.cpp  registerwndow.h  registerwndow.ui  userinfowindow.cpp  userinfowindow.h  userinfowindow.ui  usermemberwindow.cpp  usermemberwindow.h  usermemberwindow.ui
user/UserModule/: UserModule.cpp  UserModule.hpp
